--- a/student-service/src/main/resources/application.yml
+++ b/student-service/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8081
-
+  error:
+    include-message: always
+    include-binding-errors: always
 spring:
   application:
     name: student-service
